--- a/templates/HtmlItem/itemsproyecto.html
+++ b/templates/HtmlItem/itemsproyecto.html
@@ -163,6 +163,11 @@ function archivos(id){
   <li ><a href="{% url 'AdminTipoItem.views.tipoitem_proyecto' proyecto.id %}">Tipos Item</a></li>
   <li class="active"><a href="{% url 'AdminItems.views.items_proyecto' proyecto.id %}">Items</a></li>
   <li ><a href="{% url 'AdminAtributos.views.atributo_admin' proyecto.id %}">Atributos</a></li>
+  <li ><a href="{% url 'AdminItems.views.relaciones_item' proyecto.id %}">Relaciones</a></li>
+  <li  ><a href="{% url 'AdminUsuarios.views.miembros' proyecto.id %}">Miembros</a></li>
+  
+  
+  
     {% comment %}  
     <li ><a href="{% url 'AdminProyectos.views.colaboradores' proyecto.id %}" >Colaboradores</a></li>
    <li ><a href="{% url 'AdminRoles.views.roles' proyecto.id %}">Roles</a></li>
