--- a/templates/HtmlProyecto/miproyecto.html
+++ b/templates/HtmlProyecto/miproyecto.html
@@ -7,6 +7,9 @@
 <body onload="iniciar()">
 {% block content %}
 <script>
+
+
+
 $('#id_nombre').attr('required','true')
 $('#id_descripcion').attr('required','true')
 
@@ -20,6 +23,8 @@ $('#id_descripcion').attr('required','true')
   <li ><a href="{% url 'AdminTipoItem.views.tipoitem_proyecto' proyecto.id %}">Tipos Item</a></li>
   <li ><a href="{% url 'AdminItems.views.items_proyecto' proyecto.id %}">Items</a></li>
   <li ><a href="{% url 'AdminAtributos.views.atributo_admin' proyecto.id %}">Atributos</a></li>
+  <li ><a href="{% url 'AdminItems.views.relaciones_item' proyecto.id %}">Relaciones</a></li>
+  <li  ><a href="{% url 'AdminUsuarios.views.miembros' proyecto.id %}">Miembros</a></li>
    {% comment %}
    <li ><a href="{% url 'AdminProyectos.views.colaboradores' id_proyecto %}" >Colaboradores</a></li>  
    <li><a href="{% url 'AdminRoles.views.roles' id_proyecto %}">Roles</a></li>
